--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #ff8c00;
+            background-color: #ffb6c1;
         }
         nav a {
             color: white;
